src/test/ui/reachable/expr_match.stderr
error: unreachable expression
  --> $DIR/expr_match.rs:19:5
   |
LL |     match {return} { } //~ ERROR unreachable
   |     ^^^^^^^^^^^^^^^^^^
   |
note: lint level defined here
  --> $DIR/expr_match.rs:14:9
   |
LL | #![deny(unreachable_code)]
   |         ^^^^^^^^^^^^^^^^

error: unreachable statement
  --> $DIR/expr_match.rs:24:5
   |
LL |     println!("I am dead");
   |     ^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in a macro outside of the current crate (in Nightly builds, run with -Z external-macro-backtrace for more info)

error: unreachable statement
  --> $DIR/expr_match.rs:34:5
   |
LL |     println!("I am dead");
   |     ^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in a macro outside of the current crate (in Nightly builds, run with -Z external-macro-backtrace for more info)

error: aborting due to 3 previous errors

